# chfs

./: .clang-format  .gitignore  LICENSE  Makefile.am  README.md  RELNOTE.md  chfs.c  chfs.h  chfsctl  chfsctl.in  chfsd.c  chfuse.c  configure.ac  fs.h  fs_client.c  fs_kv.c  fs_posix.c  fs_rpc.h  fs_server.c  fs_server_kv.c  fs_server_posix.c  fs_types.h  host.c  host.h  kv.c  kv.h  kv_err.h  kv_types.h  log.c  log.h  pmemkv.c  ring_list.c  ring_list.h  ring_list_rpc.c  ring_list_rpc.h  ring_rpc.c  ring_rpc.h
.devcontainer/: devcontainer.json
chfsd/: Makefile.am  backend_local.c  backend_local.h  chfsd.c  chkvdump.c  file.c  file.h  flush.c  flush.h  fs.h  fs_hook.c  fs_hook.h  fs_kv.c  fs_kv.h  fs_posix.c  fs_server.c  fs_server_kv.c  fs_server_posix.c  key.c  kv.h  lock.c  lock.h  pmemkv.c  ring.c  ring.h  ring_rpc.c  ring_rpc.h
client/: Makefile.am  chfsctl.in  chfuse.c  chlist.c  chmkdir.c  chrmdir.c  chstagein.c  murmur3sum.c
client/mpi/: Makefile.am  chfind.c  chfindrun  chstagein.c
dev/: Dockerfile  Makefile  README.md  config-test.sh  docker-compose.yaml  install-chfs.sh  install-ior.sh  install-ompi.sh  install-rdbench.sh  install.sh  test.sh
dev/backend/: README
dev/mpi-test/: bcast.c  open.c
dev/ompi/: ad_chfs.patch
doc/: Makefile.am  chfind.1.md  chfsctl.1.md  chfsd.8.md  chfuse.1.md  chlist.1.md  chmkdir.1.md  chrmdir.1.md  chstagein.1.md
lib/: Makefile.am  backend.c  backend.h  chfs.c  chfs.h  chfs_err.c  chfs_err.h  file.h  fs_client.c  fs_err.c  fs_err.h  fs_rpc.h  fs_types.h  hash.c  hash.h  key.h  koyama_hash.c  koyama_hash.h  kv_err.c  kv_err.h  kv_types.h  ll.c  ll.h  log.c  murmur3.c  murmur3.h  path.c  path.h  ring_list.c  ring_list.h  ring_list_rpc.c  ring_types.h  shash.c  shash.h  timespec.c  timespec.h
m4/: ax_mpi.m4
pkgconfig/: Makefile.am  chfs.pc.in
